fix: billing section alignment

--- a/styles.css
+++ b/styles.css
@@ -89,14 +89,23 @@ appearance: none;
 }
 .billing {
   display: grid;
+  position: relative;
   grid-template-rows: 2em;
-  grid-template-columns: 7em 5em 6em 2em;
+  grid-template-columns: 8em 5em 8em;
+  gap: 0.5rem;
+  align-items: center;
   font-size: 0.8em;
   font-weight: 550;
   height: 7em;
   border-bottom: 1px solid rgb(207, 214, 236);
-  padding-left: 24.5%;
-  overflow: nowrap;
+  margin: auto;
+  width: min-content;
+}
+.billing>span {
+  text-wrap:nowrap;
+}
+.billing>span:first-child {
+  text-align: right;
 }
 
 .discount {
@@ -110,6 +119,9 @@ appearance: none;
   text-align: center;
   padding: 3px;
   font-weight: 700;
+  position: absolute;
+  right: -7em;
+  top: 0.3rem;
 }
 
 
@@ -122,7 +134,6 @@ appearance: none;
   position: relative;
   cursor: pointer;
   transition: 0.3s;
-  bottom: 1.7em;
   }
 .check::before {
   content: '';
@@ -143,6 +154,8 @@ input:checked + .check::before {
   left: 60%;
 }
 input[type="checkbox"] {
+  width: 0;
+  height: 0;
   opacity: 0;
 }
 .check {
